# FinancialDataFetcher

./: README.md
finalcialDataFetcher/: Cargo.toml  bitcoin.txt  ethereum.txt  sp500.txt  test.txt
finalcialDataFetcher/src/: main.rs
