[package]
name = "finalcialDataFetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sleep = "1.0.2"
tokio = "1.41.1"
ureq = "2.10.1"
